<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_margin="8dp"
            android:textColor="@android:color/holo_green_light"
            android:text="@string/registration"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editTextEmailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPasswordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="8dp"
            android:hint="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNameRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"
            android:layout_margin="8dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextLastNameRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/last_name"
            android:layout_margin="8dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAgeRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/how_old_are_you"
            android:textSize="20sp"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/sign_up" />

    </LinearLayout>

</ScrollView>