<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/forgot_password_activity"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextEmailReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/reset_password" />

</LinearLayout>